codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_status_line_truncated_with_gap.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  Status line content that shoul… Plan  "
