codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_status_line_with_active_agent_label.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  Robie [explorer] · Status line content                                        "
